[package]
name = "synth"
version = "0.1.0"
authors = ["prestonmlangford <prestonmlangford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
rand_distr = "0.3.0"
rand = "0.7.3"
lazy_static = "1.4.0"
ctrlc = "3.1.7"
rustfft = "4.0.0"
rayon = "1.5.0"